--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do Vue</title>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
 </head>
 <body>
     
     <div id="app">
 
+        <div class="newtask">
+            <input type="text" v-model="newTask" placeholder="Add new task">
+            <button @click="addTask">Add task</button>
+        </div>
         <div class="tasks">
-            <div class="task" v-for="task in tasks">{{task}}</div>
+            <div class="task" v-for="task in tasks">{{task}} <i class="fas fa-window-close"></i></div>
         </div>
     </div>
 
