--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
             <img :src="logoImg" alt="logo boolean" id="logoimg">
         </div>
         <div class="newtask">
-            <input type="text" v-model="newTask" placeholder="Add new task">
+            <input type="text" v-model="newTask" placeholder="Add new task" @keyup.enter="addTask">
             <button @click="addTask">Add task</button>
         </div>
         <div class="tasks" v-if="tasks.length > 0">
-            <div class="task" v-for="(task, index) in tasks">{{task}} 
+            <div class="task" v-for="(task, index) in tasks">
+                <input type="text" v-model="tasks[index]">
                 <i class="fas fa-window-close" @click="deleteTask(index)"></i>
             </div>
         </div>
